ingress/traefik/4ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik.demo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp1
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: webapp1.demo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp1
          servicePort: http
